# quints

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  zensical.toml
.basedpyright/: baseline.json
.claude/: settings.json
.claude/hooks/: format.sh  stop-check.sh
.claude/skills/ratchet/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  docs.yml  media.yml  publish.yaml
docs/: getting-started.md  index.md  legal-forms.md
docs/guides/: fx.md  importing.md  invoicing.md  mailroom.md  reports.md  vat.md
docs/reference/: ai-agents.md  configuration.md
docs/schema/: customers.schema.json  invoice.schema.json  issuer.schema.json
media/: generate.sh  invoice.tape  mwst.tape  quickstart.tape  receivables.tape
