# Workspace root — not a package itself; the distributions live in packages/.
[project]
name = "quints-monorepo"
version = "0"
requires-python = ">=3.10"
dependencies = [
    "quints",
    "beangulp-mt940",
    "beangulp-stripe",
    "beangulp-wise[sca]",
    "beanprice-bazg",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
quints = { workspace = true }
beangulp-mt940 = { workspace = true }
beangulp-stripe = { workspace = true }
beangulp-wise = { workspace = true }
beanprice-bazg = { workspace = true }
